bk_ida/gccida/c0/fold_rtx
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fold_rtx/src/cse.c:3778:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v2; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fold_rtx/src/cse.c:3786:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v10; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fold_rtx/src/cse.c:3791:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v15; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fold_rtx/src/cse.c:3803:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v30; // [rsp+70h] [rbp-410h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fold_rtx/src/cse.c:3806:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v33; // [rsp+84h] [rbp-3FCh] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fold_rtx/src/cse.c:3815:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v42; // [rsp+E4h] [rbp-39Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fold_rtx/src/cse.c:3818:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v45; // [rsp+F8h] [rbp-388h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fold_rtx/src/cse.c:3821:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code1; // [rsp+124h] [rbp-35Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fold_rtx/src/cse.c:3847:4: error: expected ';' after expression
rtx new_const_0; // [rsp+258h] [rbp-228h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fold_rtx/src/cse.c:3847:5: error: use of undeclared identifier 'new_const_0'
rtx new_const_0; // [rsp+258h] [rbp-228h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fold_rtx/src/cse.c:3849:4: error: expected ';' after expression
rtx y_3; // [rsp+270h] [rbp-210h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fold_rtx/src/cse.c:3849:5: error: use of undeclared identifier 'y_3'
rtx y_3; // [rsp+270h] [rbp-210h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fold_rtx/src/cse.c:3851:4: error: expected ';' after expression
rtx y_2; // [rsp+280h] [rbp-200h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fold_rtx/src/cse.c:3851:5: error: use of undeclared identifier 'y_2'
rtx y_2; // [rsp+280h] [rbp-200h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fold_rtx/src/cse.c:3855:4: error: expected ';' after expression
rtx inner_const; // [rsp+2C0h] [rbp-1C0h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fold_rtx/src/cse.c:3855:5: error: use of undeclared identifier 'inner_const'; did you mean 'inner_const_0'?
rtx inner_const; // [rsp+2C0h] [rbp-1C0h] 
    ^~~~~~~~~~~
    inner_const_0
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fold_rtx/src/cse.c:3848:18: note: 'inner_const_0' declared here
 struct rtx_def *inner_const_0; // [rsp+268h] [rbp-218h] 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fold_rtx/src/cse.c:3856:4: error: expected ';' after expression
rtx y; // [rsp+2C8h] [rbp-1B8h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fold_rtx/src/cse.c:3856:5: error: use of undeclared identifier 'y'
rtx y; // [rsp+2C8h] [rbp-1B8h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fold_rtx/src/cse.c:3859:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode_arg1; // [rsp+2DCh] [rbp-1A4h] BYREF 
^
enum 
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fold_rtx/src/obj/cse.o] Error 1
